--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <hr>
   <p></p>
   <center><h2>Head of the Family: Masna Pentamma & Ramulu </h2></center>
-  <center><img src="/Users/anilmsn/Desktop/nodejs/Web Development/HtMl Personal Site/familypic.jpg" alt="Family_Pic"></center>
+  <center><img src="familypic.jpg" alt="Family_Pic"></center>
   <ol>
     <h2>
     <li>Masna Anajaneyulu</li></h2>
