--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2><li>Masna Thirupathaiah</li></h2>
     <ol>
       <li><a href="Kranthi">Kranthi & family</a></li>
-      <li><a href="Bhavani">Sravankumar & family</a></li>
+      <li><a href="Bhavani">Bhavani & family</a></li>
     </ol>
   <body>
 
