--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <center><img src="familypic.jpg" alt="Family_Pic"></center>
   <ol>
     <h2>
-    <li>Masna Anajaneyulu</li></h2>
+    <li>Masna Anajaneyulu W/o Nirmala</li></h2>
       <ol>
         <li><a href="Uma Devi">Uma Devi & family</a></li>
         <li><a href="https://github.com/anilnani505/masna/blob/main/shivafamily.jpg">Shiva & family</a></li>
@@ -26,7 +26,7 @@
       <li><a href="Sravankumar">Sravankumar & family</a></li>
       <li><a href="Saikiran">Saikiran & Family</a></li>
     </ol>
-    <h2><li>Masna Thirupathaiah</li></h2>
+    <h2><li>Masna Thirupathaiah w/o Sumangali</li></h2>
     <ol>
       <li><a href="Kranthi">Kranthi & family</a></li>
       <li><a href="Bhavani">Bhavani & family</a></li>
