--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <li>Masna Anajaneyulu W/o Nirmala</li></h2>
       <ol>
         <li><a href="Uma Devi">Uma Devi & family</a></li>
-        <li><a href="https://github.com/anilnani505/masna/blob/main/shivafamily.jpg">Shiva & family</a></li>
+        <li><a href="https://github.com/anilnani505/masna/blob/main/shivafamily.jpg">Shiva & Anusha family</a></li>
         <li><a href="Ramakrishna">Ramakrishna & Family</a></li>
       </ol>
     <h2><li>Masna Kalamma</li></h2>
     <ol>
-      <li><a href="https://github.com/anilnani505/masna/blob/main/anilfamily.jpg">AnilKumar & family</a></li>
+      <li><a href="https://github.com/anilnani505/masna/blob/main/anilfamily.jpg">AnilKumar & Anusha family</a></li>
       <li><a href="Sravankumar">Sravankumar & family</a></li>
       <li><a href="Saikiran">Saikiran & Family</a></li>
     </ol>
